4261: Fixed preview spacing and added preview border

--- a/src/components/slide/preview/remote-component-wrapper.scss
+++ b/src/components/slide/preview/remote-component-wrapper.scss
@@ -1,6 +1,7 @@
 .remote-component-wrapper {
   width: 100%;
   height: 100%;
+  box-shadow: 0 0 1px #aaa;
 
   .remote-component-content {
     max-width: 100%;
